[tool.poetry]
name = "qqq-options"
version = "0.1.0"
description = ""
authors = ["bhageerath"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
black = "^24.2.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
